test/should-fail/jfxc2199.fx
/*
 * @test/compile-error
 */
function(){"abc"} () ();
